deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: doppler
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      name: doppler
  template:
    metadata:
      labels:
        name: doppler
    spec:
      containers:
      - name: doppler
        image: edrodefeld/doppler
        imagePullPolicy: Always
        ports:
          - containerPort: 1323
