service.yml
apiVersion: v1
kind: Service
metadata:
  name: doppler-service
  namespace: default
spec:
  selector:
    name: doppler
  ports:
    - protocol: TCP
      port: 80
      targetPort: 1323
